tests/paczka1/fuzzy1/13156676.err
Error in line 9: OvIiKd A298 93,0
Error in line 28: fuTl A837 -1,6
Error in line 38: A298 A298 86,6
